--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# AI Agent temporary files
+.agents/
+.agent/
+.ai/
+.cursor/
+.claude/
+
+# Agent session cache/memory
+*.agent-state
+.agent-cache/
