--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "meshoptimizer": "^1.0.1",
     "next": "16.1.6",
     "next-intl": "^4.8.2",
